--- a/services/instagram/instagrapi/bots/volvoownersclub/notebooks/instagram_data_collection.ipynb
+++ b/services/instagram/instagrapi/bots/volvoownersclub/notebooks/instagram_data_collection.ipynb
@@ -8,12 +8,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import time\n",
     "from instagrapi import Client\n",
     "from instagrapi.exceptions import LoginRequired, TwoFactorRequired, PleaseWaitFewMinutes\n",
     "import getpass\n",
     "import logging\n",
-    "import random\n",
-    "import time\n",
     "import os\n",
     "\n",
     "# Set up logging\n",
@@ -24,32 +23,38 @@
     "    \"\"\"Calculate an exponential backoff time.\"\"\"\n",
     "    return 2 ** retry + random.uniform(0, 1)\n",
     "\n",
-    "def login_user():\n",
+    "def get_instagram_credentials():\n",
+    "    \"\"\"Get Instagram credentials from user input.\"\"\"\n",
+    "    username = input(\"Enter your Instagram username: \")\n",
+    "    password = getpass.getpass(\"Enter your Instagram password (input is hidden): \")\n",
+    "    return username, password\n",
+    "\n",
+    "def login_user(username, password):\n",
+    "    \"\"\"Login user and return Client instance.\"\"\"\n",
     "    cl = Client()\n",
-    "    USERNAME, PASSWORD = get_instagram_credentials()\n",
     "    try:\n",
-    "        cl.login(USERNAME, PASSWORD)\n",
+    "        cl.login(username, password)\n",
     "    except LoginRequired:\n",
     "        logger.error(\"Login failed. Authentication challenge required.\")\n",
     "        return None\n",
     "    except TwoFactorRequired:\n",
     "        verification_code = input(\"Enter the two-factor authentication code: \")\n",
     "        try:\n",
-    "            cl.login(USERNAME, PASSWORD, verification_code=verification_code)\n",
+    "            cl.login(username, password, verification_code=verification_code)\n",
     "        except TwoFactorRequired:\n",
     "            logger.error(\"Invalid two-factor authentication code.\")\n",
     "            return None\n",
     "    return cl\n",
     "\n",
-    "def get_instagram_credentials():\n",
-    "    username = input(\"Enter your Instagram username: \")\n",
-    "    password = getpass.getpass(\"Enter your Instagram password (input is hidden): \")\n",
-    "    return username, password\n",
-    "\n",
     "def fetch_instagram_followers(account_username):\n",
-    "    cl = login_user()\n",
-    "    if cl is None:\n",
-    "        return None\n",
+    "    \"\"\"Fetch Instagram followers and return DataFrame.\"\"\"\n",
+    "    cl = None\n",
+    "    while cl is None:\n",
+    "        username, password = get_instagram_credentials()\n",
+    "        cl = login_user(username, password)\n",
+    "        if cl is None:\n",
+    "            logger.error(\"Login failed. Retrying in 60 seconds...\")\n",
+    "            time.sleep(60)\n",
     "\n",
     "    user_id = cl.user_id_from_username(account_username)\n",
     "    \n",
@@ -87,6 +92,7 @@
     "    return pd.DataFrame(follower_data)\n",
     "\n",
     "def save_to_csv(dataframe, filepath):\n",
+    "    \"\"\"Save DataFrame to CSV file.\"\"\"\n",
     "    try:\n",
     "        os.makedirs(os.path.dirname(filepath), exist_ok=True)\n",
     "        dataframe.to_csv(filepath, index=False)\n",
@@ -96,31 +102,4 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    account_username = \"afadesign.official\"\n",
-    "    followers_df = fetch_instagram_followers(account_username)\n",
-    "    if followers_df is not None and not followers_df.empty:\n",
-    "        save_to_csv(followers_df, \"./followers.csv\")\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+    "    followers_df = fetch_instagram_
