--- a/services/instagram/instagrapi/bots/volvoownersclub/notebooks/autolabel.ipynb
+++ b/services/instagram/instagrapi/bots/volvoownersclub/notebooks/autolabel.ipynb
@@ -27,11 +27,15 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "\n",
     "# Load dataset (already preprocessed and feature engineered)\n",
-    "dataset = pd.read_csv(\"C:\\\\Projects\\\\SocialSense\\\\data_management\\\\processed\\\\instagram_data_processed.csv\")\n",
+    "try:\n",
+    "    instagram_data = pd.read_csv(\"C:\\\\Projects\\\\SocialSense\\\\data_management\\\\processed\\\\instagram_data_processed.csv\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Error: The file 'instagram_data_processed.csv' was not found.\")\n",
+    "else:\n",
     "\n",
     "# Define features and target variable\n",
-    "features = dataset.drop(columns=[\"User_ID\", \"Label\"])\n",
-    "target = dataset[\"Label\"]\n",
+    "features = instagram_data.drop(columns=['User_ID', 'Label'])\n",
+    "target = instagram_data['Label']\n",
     "\n",
     "# Split dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
@@ -73,21 +77,25 @@
     "\n",
     "# Print evaluation metrics\n",
     "print(\"Training Set:\")\n",
-    "print(\"Precision:\", train_precision)\n",
-    "print(\"Recall:\", train_recall)\n",
-    "print(\"F1 Score:\", train_f1)\n",
-    "\n",
-    "print(\"\\nTest Set:\")\n",
-    "print(\"Precision:\", test_precision)\n",
-    "print(\"Recall:\", test_recall)\n",
-    "print(\"F1 Score:\", test_f1)\n",
-    "\n",
-    "# Confusion matrices\n",
-    "print(\"\\nConfusion Matrix - Training Set:\")\n",
-    "print(confusion_matrix(y_train, y_pred_train))\n",
-    "\n",
-    "print(\"\\nConfusion Matrix - Test Set:\")\n",
-    "print(confusion_matrix(y_test, y_pred_test))\n"
+    "print(f\"Precision: {train_precision}\")\n",
+   
+
+[Page break]
+
+f\"Recall: {train_recall}\")\n",
+"print(f\"F1 Score: {train_f1}\")\n",
+"\n",
+"print(\"\\nTest Set:\")\n",
+"print(f\"Precision: {test_precision}\")\n",
+"print(f\"Recall: {test_recall}\")\n",
+"print(f\"F1 Score: {test_f1}\")\n",
+"\n",
+"# Confusion matrices\n",
+"print(\"\\nConfusion Matrix - Training Set:\")\n",
+"print(confusion_matrix(y_train, y_pred_train))\n",
+"\n",
+"print(\"\\nConfusion Matrix - Test Set:\")\n",
+"print(confusion_matrix(y_test, y_pred_test))\n"
    ]
   }
  ],
@@ -102,14 +110,4 @@
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+   "file_extension": ".py
