--- a/services/instagram/instagrapi/bots/volvoownersclub/notebooks/instagram_data_collection.ipynb
+++ b/services/instagram/instagrapi/bots/volvoownersclub/notebooks/instagram_data_collection.ipynb
@@ -1,105 +1,102 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import time\n",
-    "from instagrapi import Client\n",
-    "from instagrapi.exceptions import LoginRequired, TwoFactorRequired, PleaseWaitFewMinutes\n",
-    "import getpass\n",
-    "import logging\n",
-    "import os\n",
-    "\n",
-    "# Set up logging\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "def exponential_backoff(retry):\n",
-    "    \"\"\"Calculate an exponential backoff time.\"\"\"\n",
-    "    return 2 ** retry + random.uniform(0, 1)\n",
-    "\n",
-    "def get_instagram_credentials():\n",
-    "    \"\"\"Get Instagram credentials from user input.\"\"\"\n",
-    "    username = input(\"Enter your Instagram username: \")\n",
-    "    password = getpass.getpass(\"Enter your Instagram password (input is hidden): \")\n",
-    "    return username, password\n",
-    "\n",
-    "def login_user(username, password):\n",
-    "    \"\"\"Login user and return Client instance.\"\"\"\n",
-    "    cl = Client()\n",
-    "    try:\n",
-    "        cl.login(username, password)\n",
-    "    except LoginRequired:\n",
-    "        logger.error(\"Login failed. Authentication challenge required.\")\n",
-    "        return None\n",
-    "    except TwoFactorRequired:\n",
-    "        verification_code = input(\"Enter the two-factor authentication code: \")\n",
-    "        try:\n",
-    "            cl.login(username, password, verification_code=verification_code)\n",
-    "        except TwoFactorRequired:\n",
-    "            logger.error(\"Invalid two-factor authentication code.\")\n",
-    "            return None\n",
-    "    return cl\n",
-    "\n",
-    "def fetch_instagram_followers(account_username):\n",
-    "    \"\"\"Fetch Instagram followers and return DataFrame.\"\"\"\n",
-    "    cl = None\n",
-    "    while cl is None:\n",
-    "        username, password = get_instagram_credentials()\n",
-    "        cl = login_user(username, password)\n",
-    "        if cl is None:\n",
-    "            logger.error(\"Login failed. Retrying in 60 seconds...\")\n",
-    "            time.sleep(60)\n",
-    "\n",
-    "    user_id = cl.user_id_from_username(account_username)\n",
-    "    \n",
-    "    # Initialize variables for fetching followers\n",
-    "    all_followers = []\n",
-    "    max_id = \"\"\n",
-    "    retry = 0  # Initialize retry counter\n",
-    "    max_retries = 5  # Set maximum number of retries\n",
-    "\n",
-    "    while retry < max_retries:\n",
-    "        try:\n",
-    "            followers_chunk, next_max_id = cl.user_followers_v1_chunk(user_id, max_id=max_id)\n",
-    "            all_followers.extend(followers_chunk)\n",
-    "            if not next_max_id:  # No more followers to fetch\n",
-    "                break\n",
-    "            max_id = next_max_id\n",
-    "            retry = 0  # Reset retry counter after a successful request\n",
-    "        except PleaseWaitFewMinutes:\n",
-    "            logger.warning(f\"Rate limit hit. Waiting before retrying...\")\n",
-    "            time.sleep(exponential_backoff(retry))\n",
-    "            retry += 1\n",
-    "            continue\n",
-    "\n",
-    "    if retry == max_retries:\n",
-    "        logger.error(\"Maximum retries reached. Exiting...\")\n",
-    "        return pd.DataFrame()  # Return empty DataFrame on failure\n",
-    "\n",
-    "    follower_data = [{\n",
-    "        'username': follower.username,\n",
-    "        'full_name': follower.full_name,\n",
-    "        'user_id': follower.pk\n",
-    "    } for follower in all_followers]\n",
-    "\n",
-    "    logger.info(f\"Fetched {len(follower_data)} Instagram followers.\")\n",
-    "    return pd.DataFrame(follower_data)\n",
-    "\n",
-    "def save_to_csv(dataframe, filepath):\n",
-    "    \"\"\"Save DataFrame to CSV file.\"\"\"\n",
-    "    try:\n",
-    "        os.makedirs(os.path.dirname(filepath), exist_ok=True)\n",
-    "        dataframe.to_csv(filepath, index=False)\n",
-    "        logger.info(f\"Data saved to {filepath}\")\n",
-    "    except OSError as e:\n",
-    "        logger.error(f\"Cannot save file into {filepath}: {e}\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    account_username = \"afadesign.official\"\n",
-    "    followers_df = fetch_instagram_
+import pandas as pd
+import time
+from instagrapi import Client
+from instagrapi.exceptions import LoginRequired, TwoFactorRequired, PleaseWaitFewMinutes
+import getpass
+import logging
+import os
+import random
+
+# Set up logging
+logging.basicConfig(level=logging.INFO)
+logger = logging.getLogger(__name__)
+
+def exponential_backoff(retry):
+    """Calculate an exponential backoff time."""
+    return 2 ** retry + random.uniform(0, 1)
+
+def get_instagram_credentials():
+    """Get Instagram credentials from user input."""
+    username = input("Enter your Instagram username: ")
+    password = getpass.getpass("Enter your Instagram password (input is hidden): ")
+    return username, password
+
+def login_user(username, password):
+    """Login user and return Client instance."""
+    cl = Client()
+    for _ in range(3):
+        try:
+            cl.login(username, password)
+            break
+        except LoginRequired:
+            logger.error("Login failed. Authentication challenge required.")
+            return None
+        except TwoFactorRequired:
+            verification_code = input("Enter the two-factor authentication code: ")
+            try:
+                cl.login(username, password, verification_code=verification_code)
+                break
+            except TwoFactorRequired:
+                logger.error("Invalid two-factor authentication code.")
+                return None
+    return cl
+
+def fetch_instagram_followers(account_username):
+    """Fetch Instagram followers and return DataFrame."""
+    cl = None
+    while cl is None:
+        username, password = get_instagram_credentials()
+        cl = login_user(username, password)
+        if cl is None:
+            logger.error("Login failed. Retrying in 60 seconds...")
+            time.sleep(60)
+
+    user_id = cl.user_id_from_username(account_username)
+
+    all_followers = []
+    max_id = ""
+    retry = 0
+    max_retries = 5
+
+    while retry < max_retries:
+        try:
+            followers_chunk, next_max_id = cl.user_followers_v1_chunk(user_id, max_id=max_id)
+            all_followers.extend(followers_chunk)
+            if not next_max_id:
+                break
+            max_id = next_max_id
+            retry = 0
+        except PleaseWaitFewMinutes:
+            logger.warning(f"Rate limit hit. Waiting before retrying...")
+            time.sleep(exponential_backoff(retry))
+            retry += 1
+            continue
+
+    if retry == max_retries:
+        logger.error("Maximum retries reached. Exiting...")
+        return pd.DataFrame()  # Return empty DataFrame on failure
+
+    follower_data = [
+        {
+            'username': follower.username,
+            'full_name': follower.full_name,
+            'user_id': follower.pk
+        } for follower in all_followers
+    ]
+
+    logger.info(f"Fetched {len(follower_data)} Instagram followers.")
+    return pd.DataFrame(follower_data)
+
+def save_to_csv(dataframe, filepath):
+    """Save DataFrame to CSV file."""
+    try:
+        os.makedirs(os.path.dirname(filepath), exist_ok=True)
+        dataframe.to_csv(filepath, index=False)
+        logger.info(f"Data saved to {filepath}")
+    except OSError as e:
+        logger.error(f"Cannot save file into {filepath}: {e}")
+
+if __name__ == "__main__":
+    account_username = "afadesign.official"
+    followers_df = fetch_instagram_followers(account_username)
+    save_to_csv(followers_df, "followers.csv")
