--- a/services/instagram/instagrapi/bots/afadesign.official/notebooks/followers_collection.ipynb
+++ b/services/instagram/instagrapi/bots/afadesign.official/notebooks/followers_collection.ipynb
@@ -1,355 +1,147 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "import os\n",
-    "import sys\n",
-    "import time\n",
-    "from datetime import datetime, time\n",
-    "from typing import List, Tuple\n",
-    "\n",
-    "from cachetools import TTLCache\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "from instagrapi import Client\n",
-    "from instagrapi.exceptions import (\n",
-    "    ChallengeRequired,\n",
-    "    ClientError,\n",
-    "    PleaseWaitFewMinutes,\n",
-    "    TwoFactorRequired,\n",
-    "    BadPassword,\n",
-    "    LoginRequired,\n",
-    "    ReloginAttemptExceeded,\n",
-    ")\n",
-    "from instagrapi.types import UserShort\n",
-    "from services.instagram.instagrapi.extractors import extract_user_short\n",
-    "from services.instagram.instagrapi.mixins.user import MAX_USER_COUNT\n",
-    "\n",
-    "# Load environment variables from .env file\n",
-    "load_dotenv()\n",
-    "\n",
-    "# Verify presence of required environment variables\n",
-    "INSTA_USERNAME = os.getenv(\"INSTA_USERNAME\")\n",
-    "INSTA_PASSWORD = os.getenv(\"INSTA_PASSWORD\")\n",
-    "if not INSTA_USERNAME or not INSTA_PASSWORD:\n",
-    "    print(\"Error: INSTA_USERNAME or INSTA_PASSWORD not set in environment variables.\")\n",
-    "    sys.exit(1)\n",
-    "\n",
-    "\n",
-    "def setup_logging():\n",
-    "    \"\"\"Configure logging.\"\"\"\n",
-    "    logging.basicConfig(level=os.getenv(\"LOG_LEVEL\", \"INFO\").upper())\n",
-    "    logger_inst = logging.getLogger(__name__)  # Rename to logger_inst\n",
-    "    handler = logging.StreamHandler(sys.stdout)\n",
-    "    formatter = logging.Formatter(\"%(asctime)s - %(levelname)s - %(message)s\")\n",
-    "    handler.setFormatter(formatter)\n",
-    "    logger_inst.addHandler(handler)\n",
-    "    return logger_inst\n",
-    "\n",
-    "\n",
-    "# Initialize cache for storing follower details temporarily\n",
-    "follower_info_cache = TTLCache(maxsize=1000, ttl=3600)\n",
-    "\n",
-    "logger = setup_logging()\n",
-    "\n",
-    "\n",
-    "def validate_follower_data(follower_info, username):\n",
-    "    \"\"\"Ensure follower data has necessary attributes and valid content.\"\"\"\n",
-    "    if not follower_info:\n",
-    "        logger.error({\"error\": \"Follower data is None.\", \"username\": username})\n",
-    "        raise ValueError(f\"Follower data for {username} is None.\")\n",
-    "    required_attrs = [\"username\", \"full_name\", \"pk\"]\n",
-    "    missing_attrs = [attr for attr in required_attrs if not follower_info.get(attr)]\n",
-    "    if missing_attrs:\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Missing required attributes.\",\n",
-    "                \"username\": username,\n",
-    "                \"missing_attrs\": missing_attrs,\n",
-    "            }\n",
-    "        )\n",
-    "        raise ValueError(f\"Missing required attributes for {username}: {missing_attrs}\")\n",
-    "\n",
-    "\n",
-    "def calculate_engagement_metrics(api_client, user_id):\n",
-    "    \"\"\"Calculate engagement metrics based on the user's recent posts.\"\"\"\n",
-    "    try:\n",
-    "        posts = api_client.user_feed(user_id, amount=10)\n",
-    "        total_likes = sum(post.like_count for post in posts)\n",
-    "        total_comments = sum(post.comment_count for post in posts)\n",
-    "        post_count = len(posts)\n",
-    "        avg_likes = total_likes / post_count if post_count else 0\n",
-    "        avg_comments = total_comments / post_count if post_count else 0\n",
-    "        engagement_ratio = (\n",
-    "            (total_likes + total_comments) / post_count if post_count else 0\n",
-    "        )\n",
-    "        return avg_likes, avg_comments, engagement_ratio\n",
-    "    except (ChallengeRequired, PleaseWaitFewMinutes, ClientError) as ex:\n",
-    "        logger.error(\n",
-    "            {\"error\": \"Error calculating engagement metrics.\", \"exception\": str(ex)}\n",
-    "        )\n",
-    "        return 0, 0, 0\n",
-    "\n",
-    "\n",
-    "class FetchError(Exception):\n",
-    "    \"\"\"Custom exception class for fetch errors.\"\"\"\n",
-    "\n",
-    "    def __init__(self, message):\n",
-    "        self.message = message\n",
-    "        super().__init__(message)\n",
-    "\n",
-    "\n",
-    "def retry_on_error(retries=3, delay=1, backoff=2):\n",
-    "    def decorator(func):\n",
-    "        def wrapper(*args, **kwargs):\n",
-    "            current_delay = delay  # Initialize delay here\n",
-    "            for _ in range(retries):\n",
-    "                try:\n",
-    "                    return func(*args, **kwargs)\n",
-    "                except (ChallengeRequired, PleaseWaitFewMinutes, ClientError) as ex:\n",
-    "                    logger.warning(\n",
-    "                        {\n",
-    "                            \"warning\": \"Retrying after recoverable error.\",\n",
-    "                            \"exception\": str(ex),\n",
-    "                        }\n",
-    "                    )\n",
-    "                    time.sleep(current_delay)\n",
-    "                    current_delay *= backoff\n",
-    "            raise FetchError(\"Max retries exceeded. Error not recoverable.\")\n",
-    "\n",
-    "        return wrapper\n",
-    "\n",
-    "    return decorator\n",
-    "\n",
-    "\n",
-    "@retry_on_error(retries=3, delay=1, backoff=2)\n",
-    "def fetch_follower_details(api_client, username):\n",
-    "    \"\"\"Fetch detailed information for a specific follower.\"\"\"\n",
-    "    cached_data = follower_info_cache.get(username)\n",
-    "    if cached_data:\n",
-    "        logger.debug(\n",
-    "            {\"message\": \"Using cached data for follower.\", \"username\": username}\n",
-    "        )\n",
-    "        return cached_data\n",
-    "    try:\n",
-    "        logger.debug(\n",
-    "            {\"message\": \"Fetching details for follower.\", \"username\": username}\n",
-    "        )\n",
-    "        follower_info = api_client.user_info_by_username(username)\n",
-    "        validate_follower_data(follower_info, username)\n",
-    "        metrics = calculate_engagement_metrics(api_client, follower_info.pk)\n",
-    "        follower_data = {\n",
-    "            \"username\": follower_info.username,\n",
-    "            \"full_name\": follower_info.full_name,\n",
-    "            \"user_id\": follower_info.pk,\n",
-    "            \"average_likes_per_post\": metrics[0],\n",
-    "            \"average_comments_per_post\": metrics[1],\n",
-    "            \"engagement_ratio\": metrics[2],\n",
-    "            \"recent_activity\": datetime.now().isoformat(),\n",
-    "        }\n",
-    "        follower_info_cache[username] = follower_data\n",
-    "        return follower_data\n",
-    "    except ClientError as ex:\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Error fetching details for follower.\",\n",
-    "                \"exception\": str(ex),\n",
-    "                \"username\": username,\n",
-    "            }\n",
-    "        )\n",
-    "        return None\n",
-    "    except ValueError as ve:\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Error validating follower data.\",\n",
-    "                \"exception\": str(ve),\n",
-    "                \"username\": username,\n",
-    "            }\n",
-    "        )\n",
-    "        return None\n",
-    "    except Exception as ex:\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Error fetching details for follower.\",\n",
-    "                \"exception\": str(ex),\n",
-    "                \"username\": username,\n",
-    "            }\n",
-    "        )\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "def handle_login_exception(ex, api_client, username):\n",
-    "    \"\"\"\n",
-    "    Handle exceptions that occur during login.\n",
-    "    \"\"\"\n",
-    "    if isinstance(ex, BadPassword):\n",
-    "        if api_client.relogin_attempt > 0:\n",
-    "            api_client.freeze(str(ex), days=7)\n",
-    "            raise ReloginAttemptExceeded(ex)\n",
-    "        api_client.settings = api_client.rebuild_client_settings()\n",
-    "        return api_client.update_client_settings(api_client.get_settings())\n",
-    "    elif isinstance(ex, LoginRequired):\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Login required.\",\n",
-    "                \"exception\": str(ex),\n",
-    "                \"username\": username,\n",
-    "            }\n",
-    "        )\n",
-    "        api_client.relogin()\n",
-    "        return api_client.update_client_settings(api_client.get_settings())\n",
-    "    else:\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Unexpected error during login.\",\n",
-    "                \"exception\": str(ex),\n",
-    "                \"username\": username,\n",
-    "            }\n",
-    "        )\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "def login_user(username, password):\n",
-    "    \"\"\"\n",
-    "    Log in the user using the provided credentials.\n",
-    "    \"\"\"\n",
-    "    api_client = Client()\n",
-    "    try:\n",
-    "        api_client.login(username, password)\n",
-    "        logger.info({\"message\": \"Login successful.\", \"username\": username})\n",
-    "        return api_client\n",
-    "    except (TwoFactorRequired, BadPassword, LoginRequired) as ex:\n",
-    "        if isinstance(ex, TwoFactorRequired):\n",
-    "            logger.info(\n",
-    "                {\"message\": \"Two-factor authentication required.\", \"username\": username}\n",
-    "            )\n",
-    "        return handle_login_exception(ex, api_client, username)\n",
-    "    except Exception as e:\n",
-    "        logger.error(\n",
-    "            {\n",
-    "                \"error\": \"Unexpected error during login.\",\n",
-    "                \"exception\": str(e),\n",
-    "                \"username\": username,\n",
-    "            }\n",
-    "        )\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "def user_followers_v1(api_client, user_id: str, amount: int = 0) -> List[UserShort]:\n",
-    "    \"\"\"\n",
-    "    Updated method to fetch user's followers, ensuring correct user ID usage and error handling.\n",
-    "    \"\"\"\n",
-    "    users, _ = user_followers_v1_chunk(api_client, str(user_id), amount)\n",
-    "    if amount:\n",
-    "        users = users[:amount]\n",
-    "    return users\n",
-    "\n",
-    "\n",
-    "def user_followers_v1_chunk(\n",
-    "    api_client, user_id: str, max_amount: int = 0, max_id: str = \"\"\n",
-    ") -> Tuple[List[UserShort], bool]:\n",
-    "    \"\"\"\n",
-    "    Fetch a chunk of user's followers with updated endpoint and error handling.\n",
-    "    \"\"\"\n",
-    "    unique_set = set()\n",
-    "    users = []\n",
-    "\n",
-    "    try:\n",
-    "        result = api_client.private_request(\n",
-    "            f\"friendships/{user_id}/followers/\",  # Updated endpoint\n",
-    "            params={\n",
-    "                \"max_id\": max_id,\n",
-    "                \"count\": max_amount or MAX_USER_COUNT,\n",
-    "                \"rank_token\": api_client.rank_token,\n",
-    "                \"search_surface\": \"follow_list_page\",\n",
-    "                \"query\": \"\",\n",
-    "                \"enable_groups\": \"true\",\n",
-    "            },\n",
-    "        )\n",
-    "\n",
-    "        users.extend(extract_unique_users(result.get(\"users\", []), unique_set))\n",
-    "\n",
-    "        max_id = result.get(\"next_max_id\")\n",
-    "        has_more = bool(max_id) and (not max_amount or len(users) < max_amount)\n",
-    "        return users, has_more\n",
-    "\n",
-    "    except ClientError as e:\n",
-    "        if e.response.status_code == 404:\n",
-    "            logger.error({\"error\": \"Endpoint not found.\", \"user_id\": user_id})\n",
-    "        else:\n",
-    "            logger.error(\n",
-    "                {\n",
-    "                    \"error\": \"Error fetching followers.\",\n",
-    "                    \"exception\": str(e),\n",
-    "                    \"user_id\": user_id,\n",
-    "                }\n",
-    "            )\n",
-    "\n",
-    "    return users, False\n",
-    "\n",
-    "\n",
-    "def extract_unique_users(users_data, unique_set):\n",
-    "    \"\"\"\n",
-    "    Extract unique users from user data and update unique set.\n",
-    "    \"\"\"\n",
-    "    unique_users = []\n",
-    "    for user in users_data:\n",
-    "        user = extract_user_short(user)\n",
-    "        if user.pk not in unique_set:\n",
-    "            unique_set.add(user.pk)\n",
-    "            unique_users.append(user)\n",
-    "    return unique_users\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    client = login_user(INSTA_USERNAME, INSTA_PASSWORD)\n",
-    "    if client:\n",
-    "        logger.info(\n",
-    "            {\"message\": \"Proceeding with main logic.\", \"username\": INSTA_USERNAME}\n",
-    "        )\n",
-    "        followers = user_followers_v1(client, INSTA_USERNAME)\n",
-    "        for follower in followers:\n",
-    "            logger.info({\"message\": \"Follower\", \"username\": follower.username})\n",
-    "    else:\n",
-    "        logger.error({\"error\": \"Login failed.\", \"username\": INSTA_USERNAME})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "af0cc81a79509b6d"
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+import logging
+import os
+import sys
+import time
+from datetime import datetime, time
+from typing import List, Tuple
+
+import cachetools
+import dotenv
+from instagrapi import Client
+from instagrapi.exceptions import (
+    ChallengeRequired,
+    ClientError,
+    PleaseWaitFewMinutes,
+    TwoFactorRequired,
+    BadPassword,
+    LoginRequired,
+    ReloginAttemptExceeded,
+)
+from instagrapi.types import UserShort
+from services.instagram.instagrapi.extractors import extract_user_short
+from services.instagram.instagrapi.mixins.user import MAX_USER_COUNT
+
+# Load environment variables from .env file
+dotenv.load_dotenv()
+
+# Verify presence of required environment variables
+INSTA_USERNAME = os.getenv("INSTA_USERNAME")
+INSTA_PASSWORD = os.getenv("INSTA_PASSWORD")
+
+if not INSTA_USERNAME or not INSTA_PASSWORD:
+    print("Error: INSTA_USERNAME or INSTA_PASSWORD not set in environment variables.")
+    sys.exit(1)
+
+def setup_logging():
+    """Configure logging."""
+    logging.basicConfig(level=os.getenv("LOG_LEVEL", "INFO").upper())
+    logger_inst = logging.getLogger(__name__)  # Rename to logger_inst
+    handler = logging.StreamHandler(sys.stdout)
+    formatter = logging.Formatter("%(asctime)s - %(levelname)s - %(message)s")
+    handler.setFormatter(formatter)
+    logger_inst.addHandler(handler)
+    return logger_inst
+
+logger = setup_logging()
+
+# Initialize cache for storing follower details temporarily
+follower_info_cache = cachetools.TTLCache(maxsize=1000, ttl=3600)
+
+def validate_follower_data(follower_info, username):
+    """Ensure follower data has necessary attributes and valid content."""
+    if not follower_info:
+        logger.error({"error": "Follower data is None.", "username": username})
+        raise ValueError(f"Follower data for {username} is None.")
+
+    required_attrs = ["username", "full_name", "pk"]
+    missing_attrs = [attr for attr in required_attrs if not follower_info.get(attr)]
+
+    if missing_attrs:
+        logger.error(
+            {
+                "error": "Missing required attributes.",
+                "username": username,
+                "missing_attrs": missing_attrs,
+            }
+        )
+        raise ValueError(f"Missing required attributes for {username}: {missing_attrs}")
+
+def calculate_engagement_metrics(api_client, user_id):
+    """Calculate engagement metrics based on the user's recent posts."""
+    try:
+        posts = api_client.user_feed(user_id, amount=10)
+        total_likes = sum(post.like_count for post in posts)
+        total_comments = sum(post.comment_count for post in posts)
+        post_count = len(posts)
+        avg_likes = total_likes / post_count if post_count else 0
+        avg_comments = total_comments / post_count if post_count else 0
+        engagement_ratio = (total_likes + total_comments) / post_count if post_count else 0
+        return avg_likes, avg_comments, engagement_ratio
+    except (ChallengeRequired, PleaseWaitFewMinutes, ClientError) as ex:
+        logger.error(
+            {"error": "Error calculating engagement metrics.", "exception": str(ex)}
+        )
+        return 0, 0, 0
+
+class FetchError(Exception):
+    """Custom exception class for fetch errors."""
+
+    def __init__(self, message):
+        self.message = message
+        super().__init__(message)
+
+def retry_on_error(retries=3, delay=1, backoff=2):
+    """Retry function decorator."""
+
+    def decorator(func):
+        def wrapper(*args, **kwargs):
+            current_delay = delay
+
+            for _ in range(retries):
+                try:
+                    return func(*args, **kwargs)
+                except (
+                    ChallengeRequired,
+                    PleaseWaitFewMinutes,
+                    ClientError,
+                ) as ex:
+                    logger.warning(
+                        {
+                            "warning": "Retrying after recoverable error.",
+                            "exception": str(ex),
+                        }
+                    )
+                    time.sleep(current_delay)
+                    current_delay *= backoff
+
+            raise FetchError("Max retries exceeded. Error not recoverable.")
+
+        return wrapper
+
+    return decorator
+
+@retry_on_error(retries=3, delay=1, backoff=2)
+def fetch_follower_details(api_client, username):
+    """Fetch detailed information for a specific follower."""
+    cached_data = follower_info_cache.get(username)
+    if cached_data:
+        logger.debug(
+            {"message": "Using cached data for follower.", "username": username}
+        )
+        return cached_data
+
+    try:
+        logger.debug(
+            {"message": "Fetching details for follower.", "username": username}
+        )
+        follower_info = api_client.user_info_by_username(username)
+        validate_follower_data(follower_info, username)
+        metrics = calculate_engagement_metrics(api_client, follower_info.pk)
+        follower_data = {
+            "username": follower_info.username,
+            "full_name": follower_info.full_name,
+            "user_id": follower_info.pk,
+            "average_likes_per_post": metrics[0],
+            "average_comments_per_post": metrics[1],
+            "engagement_ratio": metrics[2],
+            "recent_activity": datetime.now().iso
